apps/nestjs/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nestjs
  template:
    metadata:
      labels:
        app: nestjs
    spec:
      containers:
        - name: nestjs
          image: ghcr.io/veecodekub/nestjs-cicd
          ports:
            - containerPort: 3000
