apps/nestjs/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs
spec:
  selector:
    app: nestjs
  ports:
    - port: 80
      targetPort: 3000
