apps/nestjs/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nestjs
spec:
  ingressClassName: traefik
  rules:
    - host: nestjs.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nestjs
                port:
                  number: 80
